src/test.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-runner
spec:
  containers:
    - name: prismarine-k8s-runner
      image: ghcr.io/kashalls/prismarine-k8s-runner:main-d046213a-1684172042
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      volumeMounts:
        - name: unique-secret-volume
          mountPath: /etc/prismarine-config
          readOnly: true
  volumes:
    - name: unique-secret-volume
      secret:
        secretName: enviro-secret
