src/basicnetworkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: customers

spec:
  podSelector: {}
  egress:
    - to:
        - podSelector: {}
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - "10.0.0.0/8"
  ingress:
    - from:
        - podSelector: {}
        - ipBlock:
            cidr: "0.0.0.0/0"
  policyTypes:
    - Ingress
    - Egress
