src/manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prismarine-controller
---
apiVersion: v1
kind: Namespace
metadata:
  name: prismarine-client
---
apiVersion: v1
kind: Pod
metadata:
  name: prismarine-controller
  namespace: prismarine-controller
  labels:
    k8s.kashall.dev/controller: "true"
spec:
  containers:
  - name: prismarine-controller
    image: ghcr.io/kashalls/prismarine-k8s-master:main-59ee1368-1684265687
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: prismarine-client
spec:
  podSelector: {}
  egress:
    - to:
        - podSelector:
            matchLabels:
              - "k8s.kashall.dev/controller=true"
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - "10.0.0.0/8"
  ingress:
    - from:
        - podSelector: {}
        - ipBlock:
            cidr: "0.0.0.0/0"
  policyTypes:
    - Ingress
    - Egress
